deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-churn
  labels:
    app: api-churn
spec:
  selector:
    matchLabels:
      app: api-churn
  replicas: 3
  template:
    metadata:
      labels:
        app: api-churn
    spec:
      containers:
        - name: api
          image: lgourdet/api_churn:latest
          ports:
            - containerPort: 8000
