my_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-api-ingress
spec:
  defaultBackend:
    service:
      name: ml-api-service
      port:
        number: 80
